# Calamity

./: ActionHandler.h  CMakeLists.txt  README.md  main.cpp
Calamity/: Action.h  ActionManager.cpp  ActionManager.h  CMakeLists.txt  Calamity.h  Context.h  ContextManager.cpp  ContextManager.h  Core.cpp  Core.h  FboManager.cpp  FboManager.h  FontManager.cpp  FontManager.h  Functor.h  Properties.cpp  Properties.h  SpriteManager.cpp  SpriteManager.h  TextureAtlas.cpp  TextureAtlas.h  TextureManager.cpp  TextureManager.h  Utility.cpp
Calamity/Gui/: ButtonGroup.cpp  ButtonGroup.h  Checkbox.cpp  Checkbox.h  ContextTabs.cpp  ContextTabs.h  Gui.cpp  Gui.h  HorizontalLayout.cpp  HorizontalLayout.h  InputGroup.cpp  InputGroup.h  LineEdit.cpp  LineEdit.h  ListView.cpp  ListView.h  SegmentControl.cpp  SegmentControl.cpp.rjS801  SegmentControl.h  TestWidget.cpp  TestWidget.h  TreeList.cpp  TreeList.h  VerticalBoxLayout.cpp  VerticalBoxLayout.h  VerticalLayout.cpp  VerticalLayout.h  Widget.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
Calamity/Gui/ActionHandler/: ButtonHandler.cpp  ButtonHandler.h  InputHandler.cpp  InputHandler.h  LineEditHandler.cpp  LineEditHandler.h  MoveWindowHandler.cpp  MoveWindowHandler.h  ScaleVerticalBoxHandler.cpp  ScaleVerticalBoxHandler.h  ScaleWindowHandler.cpp  ScaleWindowHandler.h  SegmentControlHandler.cpp  SegmentControlHandler.h
Calamity/Math/: Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h
Calamity/Renderer/: RenderLayer.cpp  RenderLayer.h  RenderLayerTmp.cpp  Renderer.cpp  Renderer.h
Calamity/Shader/: CharacterMeshShader.cpp  CharacterMeshShader.h  Color3DShader.cpp  Color3DShader.h  ColorShader.cpp  ColorShader.h  DeferredShader.cpp  DeferredShader.h  FontShader.cpp  FontShader.h  MeshShader.cpp  MeshShader.h  NullShader.cpp  NullShader.h  RadialBlurShader.cpp  RadialBlurShader.h  Shader.cpp  Shader.h  SimpleShader.cpp  SimpleShader.h  SpriteShader.cpp  SpriteShader.h  TextureShader.cpp  TextureShader.h  characterMesh.frag  characterMesh.vert  color.frag  color.vert  color3D.frag  color3D.vert  font.frag  font.vert  mesh.frag  mesh.vert  null.frag  null.vert  pointLight.frag  pointLight.vert  radialBlur.frag  radialBlur.vert  (+7 more)
CharacterEditor/: BoneProperties.cpp  BoneProperties.h  BoneSelection.cpp  BoneSelection.h  CharacterEditor.cpp  CharacterEditor.h  CharacterEditorProperties.cpp  CharacterEditorProperties.h
CharacterEditor/ActionHandler/: CreateBonesHandler.cpp  CreateBonesHandler.h  MoveBonesHandler.cpp  MoveBonesHandler.h  PanViewHandler.cpp  PanViewHandler.h  RotateBonesHandler.cpp  RotateBonesHandler.h  ScaleBonesHandler.cpp  ScaleBonesHandler.h
CharacterEditor/Actions/: ChangeBoneProperty.cpp  ChangeBoneProperty.h  CreateBones.cpp  CreateBones.h  MoveBones.cpp  MoveBones.h  RemoveBones.cpp  RemoveBones.h  ReorderBone.cpp  ReorderBone.h  RotateBones.cpp  RotateBones.h  ScaleBones.cpp  ScaleBones.h  SelectBones.cpp  SelectBones.h  SetBonesParent.cpp  SetBonesParent.h
CharacterEditor/Functors/: LoadBoneListFunctor.cpp  LoadBoneListFunctor.h  ReorderBoneFunctor.cpp  ReorderBoneFunctor.h
CharacterEditor/Gui/: BoneItem.cpp  BoneItem.h
CharacterSystem/: Camera.cpp  Camera.h  CharacterClothComponent.cpp  CharacterClothComponent.h  CharacterController.cpp  CharacterController.h  CharacterEditor3DProperties.cpp  CharacterEditor3DProperties.h  CharacterMeshComponent.cpp  CharacterMeshComponent.h  CharacterObject.cpp  CharacterObject.h  CharacterSkeleton.cpp  CharacterSkeleton.h  ClothObject.cpp  ClothObject.h  DebugDraw.cpp  DebugDraw.h  GBuffer.cpp  GBuffer.h  GameObject3D.cpp  GameObject3D.h  IKTestObject.cpp  IKTestObject.h  Lights.cpp  Lights.h  Mesh.cpp  Mesh.h  MeshObject.cpp  MeshObject.h  Selection3D.cpp  Selection3D.h  Terrain.cpp  Terrain.h  Test.cpp  Test.h  Texture.cpp  Texture.h
CharacterSystem/ActionHandler/: MoveSelection3DHandler.cpp  MoveSelection3DHandler.h
CharacterSystem/Actions/: MoveSelection3D.cpp  MoveSelection3D.h
CharacterSystem/Functors/: LoadBone3DListFunctor.cpp  LoadBone3DListFunctor.h
CharacterSystem/Gui/: Bone3DItem.cpp  Bone3DItem.h  CharacterComponentItem.cpp  CharacterComponentItem.h
Common/: BoneManager.cpp  BoneManager.h  BoneObject.cpp  BoneObject.h  CompositionManager.cpp  CompositionManager.h  GameManager.cpp  GameManager.h  LayerManager.cpp  LayerManager.h  SharedTriangleData.cpp  SharedTriangleData.h  SpriteObject.cpp  SpriteObject.h  TriangleObject.cpp  TriangleObject.h
Common/Gui/: LayerItem.cpp  LayerItem.h
Data/: cube.fbx  sphere.fbx
Data/ClothComponents/: cape.fbx
Data/MeshComponents/: arms.fbx  boots.fbx  cape.fbx  characterBase.fbx  characterOld.fbx  eyes.fbx  head.fbx  headTest.fbx  headTextureTest.fbx  pants.fbx  shirt.fbx
Data/Skeleton/: characterBaseSkeleton.fbx  characterBaseSkeletonNoCape.fbx
MapEditor/: LayerProperties.cpp  LayerProperties.h  MapEditor.cpp  MapEditor.h  MapEditorProperties.cpp  MapEditorProperties.h  MapEditorSelection.cpp  MapEditorSelection.h  MapObjectProperties.cpp  MapObjectProperties.h
MapEditor/ActionHandler/: CreateTriangleHandler.cpp  CreateTriangleHandler.h  MoveObjectsHandler.cpp  MoveObjectsHandler.h  PanViewHandler.cpp  PanViewHandler.h  RotateObjectsHandler.cpp  RotateObjectsHandler.h  ScaleObjectsHandler.cpp  ScaleObjectsHandler.h
MapEditor/Actions/: ChangeLayerProperty.cpp  ChangeLayerProperty.h  CreateLayer.cpp  CreateLayer.h  CreateSpriteObject.cpp  CreateSpriteObject.h  CreateTriangleObject.cpp  CreateTriangleObject.h  FillTriangle.cpp  FillTriangle.h  MoveLayer.cpp  MoveLayer.h  MoveObjects.cpp  MoveObjects.h  RemoveLayer.cpp  RemoveLayer.h  RemoveObjects.cpp  RemoveObjects.h  RotateObjects.cpp  RotateObjects.h  ScaleObjects.cpp  ScaleObjects.h  SelectObjects.cpp  SelectObjects.h
MapEditor/Functors/: CreateLayerFunctor.cpp  CreateLayerFunctor.h  LoadLayerListFunctor.cpp  LoadLayerListFunctor.h  MoveLayerFunctor.cpp  MoveLayerFunctor.h  RemoveLayerFunctor.cpp  RemoveLayerFunctor.h  SelectLayerFunctor.cpp  SelectLayerFunctor.h
MapEditor/Gui/: ObjectItem.cpp  ObjectItem.h
